2012-03-28  Sergio Villar Senin  <svillar@igalia.com>

        [Soup] DNS prefetching spams resolver, shoots self in the foot
        https://bugs.webkit.org/show_bug.cgi?id=41630

        Reviewed by Martin Robinson.

        Bump libsoup and glib dependencies.

        * Source/cmake/OptionsEfl.cmake:
        * configure.ac:

2012-04-09  Martin Robinson  <mrobinson@igalia.com>

        [soup] Crash while loading http://www.jusco.cn
        https://bugs.webkit.org/show_bug.cgi?id=68238

        Reviewed by Philippe Normand.

        * configure.ac: Bumped the libsoup dependency to 2.37.90.

2012-03-28  Xan Lopez  <xlopez@igalia.com>

        [GTK] Respect NOCONFIGURE option in autogen.sh
        https://bugs.webkit.org/show_bug.cgi?id=82447

        Reviewed by Philippe Normand.

        Make autogen.sh follow the new build-api for GNOME, see
        http://people.gnome.org/~walters/docs/build-api.txt

        * autogen.sh: respect the NOCONFIGURE environment flag, per the
        new GNOME build-api.

2012-03-27  Martin Robinson  <mrobinson@igalia.com>

        Update the NEWS and version for the impending 1.8.0 release.

        Reviewed by Gustavo Noronha Silva.

        * configure.ac: Update the version.

2012-03-19  Martin Robinson  <mrobinson@igalia.com>

        Update the NEWS and version for the WebKitGTK+ 1.7.92 release.

        Reviewed by Gustavo Noronha Silva.

        * configure.ac:

2012-03-19  Scott Byer  <scottbyer@chromium.org>

        Cleanup obsolete files.
        https://bugs.webkit.org/show_bug.cgi?id=80737

        Reviewed by James Robinson.

        * wscript:

2012-03-07  Martin Robinson  <mrobinson@igalia.com>

        Update the NEWS and version for the 1.7.91 release.

        Reviewed by Gustavo Noronha Silva.

        * configure.ac: Update.

2012-03-06  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r109760.
        http://trac.webkit.org/changeset/109760