@@ -80,13 +80,21 @@ static void libre_impuesto_begin_print_callback(GtkPrintOperation* op, GtkPrintC
     float height = gtk_print_context_get_height(context);
     FloatRect printRect = FloatRect(0, 0, width, height);
 
-    printContext->begin(width, height);
+    // first begin height 0
+    printContext->begin(width, 0);
 
-    // TODO: Margin adjustments and header/footer support
     float headerHeight = 0;
     float footerHeight = 0;
-    float pageHeight; // height of the page adjusted by margins
+    float pageHeight = height;   // height of the page adjusted by margins
+
+    printContext->computeHeaderFooterHeight( pageHeight, headerHeight, footerHeight);
+
+    printContext->beginPage(width, height, headerHeight, footerHeight);
+
+    printContext->fillRows(width, height, headerHeight, footerHeight);
+
     printContext->computePageRects(printRect, headerHeight, footerHeight, 1.0, pageHeight);
+
     gtk_print_operation_set_n_pages(op, printContext->pageCount());
 }
 
