@@ -1,3 +1,9 @@
+2014-06-28  Henry Castr <hcvcastro@gmail.com>
+
+	Fixed Table Rows break page when printing
+	Added. Header and Footer page.
+
+	
 2012-03-28  Sergio Villar Senin  <svillar@igalia.com>
 
         [Soup] DNS prefetching spams resolver, shoots self in the foot
